--- a/index.html
+++ b/index.html
@@ -42,18 +42,19 @@
 </nav>
 
 <div id="content-container">
-    <iframe id="contentFrame" src="" style="width: 100%; height: 80vh; border: none; display: none;"></iframe>
-</div>
+        <iframe id="contentFrame" src="" style="width: 100%; height: 80vh; border: none; display: none;"></iframe>
+    </div>
 
-
-
-	  <main 
-        		<div class="intro">
-<h1>Welcome to Krishna's Website</h1>
-       			 <img src="assets/images/welcome-banner.jpeg" alt="Main Photo">
-            			<p>Here you will find various resources and information.</p>
-     			   </div>
-		  
+    <main>
+        <div class="intro">
+            <div class="intro-image">
+                <img src="assets/images/welcome-banner.jpeg" alt="Main Photo">
+            </div>
+            <div class="intro-text">
+                <h1>Welcome to Krishna's Website</h1>
+                <p>Here you will find various resources and information.</p>
+            </div>
+        </div>
    
   
 <section id="portfolio" class="portfolio">
