--- a/land-area-converter/faq.html
+++ b/land-area-converter/faq.html
@@ -6,10 +6,9 @@
     <meta name="description" content="Frequently Asked Questions (FAQ) about the Nepali Land Area Converter, including unit conversions and usage details.">
     <meta name="keywords" content="Nepal land area conversion, Bigha to Kattha, Ropani to Aana, Nepali land measurement units">
     <meta name="author" content="Krishna Niraula">
-    <meta name="question" content="What is the official land area conversion rate of Nepal?">
     <title>FAQ - Land Area Converter</title>
     <style>
-        body { font-family: Arial, sans-serif; margin: 20px; padding: 20px; max-width: 800px; }
+        body { font-family: Arial, sans-serif; margin: 20px auto; padding: 20px; max-width: 800px; }
         h1 { color: #333; }
         .faq-item { margin-bottom: 15px; }
         .back-button {
@@ -22,6 +21,7 @@
             font-size: 16px;
             cursor: pointer;
             border-radius: 5px;
+            transition: background-color 0.3s ease;
         }
         .back-button:hover {
             background-color: #0056b3;
@@ -47,7 +47,15 @@
                 "name": "What land units can I convert?",
                 "acceptedAnswer": {
                     "@type": "Answer",
-                    "text": "You can convert between Ropani, Aana, Paisa, Dam, Bigha, Kattha, Dhur, Square Meters, Acres, and more."
+                    "text": "You can convert between Ropani, Aana, Paisa, Daam, Bigha, Kattha, Dhur, Square Meters, Acres, and more."
+                }
+            },
+            {
+                "@type": "Question",
+                "name": "Are there official area conversion rates in Nepal?",
+                "acceptedAnswer": {
+                    "@type": "Answer",
+                    "text": "The 7th Amendment of the <a href=\"https://dos.gov.np/download/download/collection-of-laws-related-to-land-survey-and-measurement/downloads\" target=\"_blank\">Jagga (Nap Jach) Ain, 2019</a> (Land Survey and Measurement Act, 1963) states that 10,000 square meters is equivalent to 1 hectare. The old measurements in Ropani and Bigha will be converted according to this new standard. The previous land conversion method (you can read more about it <a href=\"https://giwmscdnone.gov.np/media/app/public/275/posts/1715242928_46.pdf\" target=\"_blank\">here</a>) defined 1 Bigha as 270 ft x 270 ft, which equals 72,900 square feet. Similarly, 1 Ropani was defined as 74 ft x 74 ft, which equals 5,476 square feet. In the Ropani, Aana, Paisa, Daam system, 1 Ropani is equal to 16 Aana, 1 Aana equals 4 Paisa, and 1 Paisa equals 4 Daam. Likewise, in the Bigha, Kattha, Dhur system, 1 Bigha equals 20 Kattha, 1 Kattha equals 20 Dhur, and 1 Dhur equals 4 Kanawaa. To know about the calculation of the area of land, you can refer to the <a href=\"https://www.dos.gov.np/tools/unit\" target=\"_blank\">official document</a>."
                 }
             },
             {
@@ -65,36 +73,26 @@
 <body>
     <h1>Frequently Asked Questions (FAQ)</h1>
 
-    <div class="faq-item">
+    <section class="faq-item">
         <h3>How accurate is the Land Area Converter?</h3>
         <p>The converter is designed to be as accurate as possible based on standard land measurement units used in Nepal.</p>
-    </div>
+    </section>
 
-   <div class="faq-item">
+    <section class="faq-item">
         <h3>Are there official area conversion rates in Nepal?</h3>
-        <p>The 7th Amendment of the <a href="https://dos.gov.np/download/download/collection-of-laws-related-to-land-survey-and-measurement/downloads" target="_blank">Jagga (Nap Jach) Ain, 2019</a> (Land Survey and Measurement Act, 1963) states that 10,000 square meters is equivalent to 1 hectare. The old measurements in Ropani and Bigaha will be converted according to this new standard. The previous land conversion method (you can read more about it <a href="https://giwmscdnone.gov.np/media/app/public/275/posts/1715242928_46.pdf" target="_blank">here</a>) defined 1 Bigaha as 270 ft x 270 ft, which equals 72,900 square feet. Similarly, 1 Ropani was defined as 74 ft x 74 ft, which equals 5,476 square feet. 
+        <p>The 7th Amendment of the <a href="https://dos.gov.np/download/download/collection-of-laws-related-to-land-survey-and-measurement/downloads" target="_blank">Jagga (Nap Jach) Ain, 2019</a> (Land Survey and Measurement Act, 1963) states that 10,000 square meters is equivalent to 1 hectare. The old measurements in Ropani and Bigha will be converted according to this new standard. The previous land conversion method (you can read more about it <a href="https://giwmscdnone.gov.np/media/app/public/275/posts/1715242928_46.pdf" target="_blank">here</a>) defined 1 Bigha as 270 ft x 270 ft, which equals 72,900 square feet. Similarly, 1 Ropani was defined as 74 ft x 74 ft, which equals 5,476 square feet. In the Ropani, Aana, Paisa, Daam system, 1 Ropani is equal to 16 Aana, 1 Aana equals 4 Paisa, and 1 Paisa equals 4 Daam. Likewise, in the Bigha, Kattha, Dhur system, 1 Bigha equals 20 Kattha, 1 Kattha equals 20 Dhur, and 1 Dhur equals 4 Kanawaa. To know about the calculation of the area of land, you can refer to the <a href="https://www.dos.gov.np/tools/unit" target="_blank">official document</a>.</p>
+    </section>
 
-        In the Ropani, Aana, Daam, Paisa system, 1 Ropani is equal to 16 Aana, 1 Aana equals 4 Daam, and 1 Daam equals 4 Paisa. Likewise, in the Bigaha, Kaththa, Dhur system, 1 Bigaha equals 20 Kaththa, 1 Kaththa equals 20 Dhur, and 1 Dhur equals 4 Kanawaa.
-
-        To know about the calculation of the area of land, you can refer to the <a href="https://www.dos.gov.np/tools/unit" target="_blank">official document</a>.</p>
-    </div>
-
-    <div class="faq-item">
+    <section class="faq-item">
         <h3>What land units can I convert?</h3>
-        <p>You can convert between Ropani, Aana, Paisa, Dam, Bigha, Kattha, Dhur, Square Meters, Acres, and more.</p>
-    </div>
+        <p>You can convert between Ropani, Aana, Paisa, Daam, Bigha, Kattha, Dhur, Square Meters, Acres, and more.</p>
+    </section>
 
-    <div class="faq-item">
+    <section class="faq-item">
         <h3>Can I use fractional values for conversions?</h3>
         <p>Yes, the tool supports fractional values for accurate calculations.</p>
-    </div>
+    </section>
 
-    <a href="/land-area-converter/" class="back-button">Back to Converter</a>
+    <a href="/land-area-converter/" class="back-button" aria-label="Return to Land Area Converter">Back to Converter</a>
 </body>
 </html>
-
-
-
-
-
-
